--- a/requirements.txt
+++ b/requirements.txt
@@ -159,3 +159,43 @@ ytmusicapi==1.10.3
 zeroconf==0.147.0
 zope.interface==7.2
 zstandard==0.23.0
+blinker==1.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-Login==0.6.3
+geographiclib==2.0
+geopy==2.4.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+networkx==3.5
+openrouteservice==2.3.3
+pillow==11.3.0
+reportlab==4.4.2
+requests==2.32.4
+urllib3==2.5.0
+Werkzeug==3.1.3
+blinker==1.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-Login==0.6.3
+geographiclib==2.0
+geopy==2.4.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+networkx==3.5
+openrouteservice==2.3.3
+pillow==11.3.0
+reportlab==4.4.2
+requests==2.32.4
+urllib3==2.5.0
+Werkzeug==3.1.3
