--- a/Configs/config.json
+++ b/Configs/config.json
@@ -9,6 +9,73 @@
             "5b3ce3597851110001cf62483e8009ec48d3457d8800432392507809",
             "5b3ce3597851110001cf624834beac90e22b4e7aae5bb2e22e93aa5d"
         ],
+        "methods": [
+            "directions", "isochrones", "distance_matrix", "elevation_line",
+            "elevation_point", "pelias_autocomplete", "pelias_reverse", "pelias_search",
+            "optimization", "places"
+        ],
+
+        "access limits": {
+            "directions": {
+                "per day": 2000,
+                "per minute": 40,
+                "request time": 1
+            },
+
+            "isochrones": {
+                "per day": 500,
+                "per minute": 20,
+                "request time": 1
+            },
+
+            "distance_matrix": {
+                "per day": 500,
+                "per minute": 20,
+                "request time": 1
+            },
+
+            "elevation_line": {
+                "per day": 200,
+                "per minute": 40,
+                "request time": 1
+            },
+
+            "elevation_point": {
+                "per day": 2000,
+                "per minute": 100,
+                "request time": 1
+            },
+
+            "pelias_autocomplete": {
+                "per day": 1000,
+                "per minute": 100,
+                "request time": 1
+            },
+
+            "pelias_reverse": {
+                "per day": 1000,
+                "per minute": 100,
+                "request time": 1
+            },
+
+            "pelias_search": {
+                "per day": 1000,
+                "per minute": 100,
+                "request time": 1
+            },
+
+            "optimization": {
+                "per day": 500,
+                "per minute": 40,
+                "request time": 1
+            },
+
+            "places": {
+                "per day": 500,
+                "per minute": 60,
+                "request time": 1
+            }
+        },
         "sleep time after unsuccessful polling of all API keys, in seconds": 60,
 
         "delta distance between coordinates for searching hashed paths, in meters": 10,
